// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets has_accident_insurance correctly for SE_ACCIDENT 1`] = `
Object {
  "name": "screen_view_insurances",
  "variables": Object {
    "has_accident_insurance": true,
    "has_home_insurance": false,
  },
}
`;

exports[`sets has_home_insurance correctly for NO_HOME_CONTENT_OWN 1`] = `
Object {
  "name": "screen_view_insurances",
  "variables": Object {
    "has_accident_insurance": false,
    "has_home_insurance": true,
  },
}
`;

exports[`sets has_home_insurance correctly for SE_APARTMENT 1`] = `
Object {
  "name": "screen_view_insurances",
  "variables": Object {
    "has_accident_insurance": false,
    "has_home_insurance": true,
  },
}
`;

exports[`sets has_home_insurance correctly for SE_HOUSE 1`] = `
Object {
  "name": "screen_view_insurances",
  "variables": Object {
    "has_accident_insurance": false,
    "has_home_insurance": true,
  },
}
`;
